# llm-playground

./: .env.example  .gitignore  README.md  arize_phoenix.py  devenv.nix  embedding.py  litellm.yaml  parakeet.py  pyproject.toml  summarize-hn.py  whisper.py
mlx/: whisper.py
ollama/: country.py  event.py
smartfunc/: summarize-hn.py  translate.py
