[project]
name = "llm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.9.0",
    "gradio>=5.23.3",
    "litellm[proxy]>=1.63.12",
    "llm-gemini>=0.17",
    "llm-openrouter>=0.4",
    "llm-sentence-transformers>=0.3.1",
    "mistral>=19.0.0",
    "mlx-whisper>=0.4.2",
    "prisma>=0.15.0",
    "smartfunc>=0.2.0",
    "strip-tags>=0.6",
]
