[project]
name = "llm-playground"
version = "0.1.0"
description = "The LLM CLI utility playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.23.3",
    "llm-gemini>=0.17",
    "llm-openrouter>=0.4",
    "llm-sentence-transformers>=0.3.1",
    "mlx-whisper>=0.4.2",
    "smartfunc>=0.2.0",
    "strip-tags>=0.6",
]
